--- a/ClassExercises/Week4/Week4_CombFilters/index.html
+++ b/ClassExercises/Week4/Week4_CombFilters/index.html
@@ -210,10 +210,8 @@
 												<li><a href = "../../../ClassExercises/Week9/Week9_MFCC">Week 9: Mel-Frequency Cepstral Coefficients (MFCCs)</a></li>
 												<li><a href = "https://github.com/ursinus-cs372-s2023/pyshazam">Week 9: Python Implementation of Shazam</a></li>
 												<li><a href = "https://github.com/ursinus-cs372-s2023/Week10_HPSS/tree/classcode">Week 10: Harmonic/Percussive Source Separation with Median Filters</a></li>
-												<!--
-												<li><a href = "../../../ClassExercises/Week9/Week9_DTWBacktrace">Week 9: DTW Backtrace</a></li>
-												<li><a href = "../../../ClassExercises/Week10/Week10_Chroma">Week 10: Chromagrams</a></li>
-												<li><a href = "../../../ClassExercises/Week11/Week11_Shazam">Week 11: Shazam</a></li>!-->
+												<li><a href = "../../../ClassExercises/Week9/Week9_MFCC">Week 10: Nonnegative Matrix Factorization for Demixing</a></li>
+												
 											</ul>
 										</li>
                                         <li>
