Adding autotuning notes

--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@
 <tr><td>28</td><td>Wed 3/29/2023</td><td>Source Separation via Nonnegative matrix factorization (NMF)</td><td><ul><li><a href = "ClassExercises/Week10/Week10_NMF">Class Notes on NMF</a></li><li><a href = "https://papers.nips.cc/paper/2000/file/f9d1152547c0bde01830b7e8bd60024c-Paper.pdf">Original Lee/Seung Paper on NMF</a></li></ul></td><td bgcolor=#f4e6e7><a href = "../Modules/Module18/Video0">Module 18: Matrix Activations for Spectral Decompositions</a> Due Before Class
 </td></tr>
 <tr><td>29</td><td>Fri 3/31/2023</td><td>Intermezzo: Dynamic Programming Beat Tracking</td><td><ul><li><a href = "ClassExercises/BeattrackNotes">Class notes on dynamic programming beat tracking</a></li></ul></td><td></td></tr>
-<tr><td>30</td><td>Mon 4/3/2023</td><td>Let It Bee, Autotuners</td><td></td><td bgcolor=#f4e6e7>HW4 Due
+<tr><td>30</td><td>Mon 4/3/2023</td><td>Let It Bee, Autotuners</td><td><ul><li><a href = "ClassExercises/Week11">Class notes on autotuners</a></li><li><a href = "https://www.youtube.com/watch?v=879vLYX02U8">Video on autotuners</a></li></ul></td><td bgcolor=#f4e6e7>HW4 Due
 <HR><a href = "Assignments/HW5_LetItBee">HW5: Let It Bee</a> Out
 </td></tr>
 <tr><td>31</td><td>Wed 4/5/2023</td><td>Self-Similarity in Audio, Spectral Clustering</td><td><ul><li><a href = "https://citeseerx.ist.psu.edu/document?repid=rep1&type=pdf&doi=a602b8d972f68b100350c5dc54681cc44f31493a">Mcfee 2014 paper</a></li><li><a href = "https://arxiv.org/pdf/1902.01023.pdf">Tralie 2019 Paper</a></li></ul></td><td></td></tr>
@@ -988,7 +988,7 @@
 												<li><a href = "https://github.com/ursinus-cs372-s2023/pyshazam">Week 9: Python Implementation of Shazam</a></li>
 												<li><a href = "https://github.com/ursinus-cs372-s2023/Week10_HPSS/tree/classcode">Week 10: Harmonic/Percussive Source Separation with Median Filters</a></li>
 												<li><a href = "ClassExercises/Week10/Week10_NMF">Week 10: Nonnegative Matrix Factorization for Demixing</a></li>
-												
+												<li><a href = "ClassExercises/Week11/">Week 11: Fundamental Frequency Tracking And Autotuners</a></li>
 											</ul>
 										</li>
                                         <li>
