--- a/index.html
+++ b/index.html
@@ -516,7 +516,8 @@
 <tr><td>30</td><td>Mon 4/3/2023</td><td>Let It Bee, Autotuners</td><td><ul><li><a href = "ClassExercises/Week11">Class notes on autotuners</a></li><li><a href = "https://www.youtube.com/watch?v=879vLYX02U8">Video on autotuners</a></li></ul></td><td bgcolor=#f4e6e7>HW4 Due
 <HR><a href = "Assignments/HW5_LetItBee">HW5: Let It Bee</a> Out
 </td></tr>
-<tr><td>31</td><td>Wed 4/5/2023</td><td>Self-Similarity in Audio, Spectral Clustering</td><td><ul><li><a href = "https://citeseerx.ist.psu.edu/document?repid=rep1&type=pdf&doi=a602b8d972f68b100350c5dc54681cc44f31493a">Mcfee 2014 paper</a></li><li><a href = "https://arxiv.org/pdf/1902.01023.pdf">Tralie 2019 Paper</a></li></ul></td><td></td></tr>
+<tr><td>31</td><td>Wed 4/5/2023</td><td>Self-Similarity in Audio, Spectral Clustering</td><td><ul><li><a href = "https://citeseerx.ist.psu.edu/document?repid=rep1&type=pdf&doi=a602b8d972f68b100350c5dc54681cc44f31493a">Mcfee 2014 paper</a></li><li><a href = "https://arxiv.org/pdf/1902.01023.pdf">Tralie 2019 Paper</a></li></ul></td><td bgcolor=#f4e6e7><a href = "../Modules/Module17/Video0">Module 17: Sonifying Mel And Chroma Filterbanks</a> Due Before Class
+</td></tr>
 <tr><td>32</td><td>Fri 4/7/2023</td><td>Cross-Similarity Matrices, Dynamic Time Warping</td><td></td><td></td></tr>
 <tr><td colspan = "5"><h2><b><a name = "neuralnets">Unit 4: Neural Networks for Digital Music Processing</a></b></h2><p></p></td></tr>
 <tr><td>33</td><td>Mon 4/10/2023</td><td>Introduction To Neural Networks</td><td></td><td></td></tr>
@@ -1010,6 +1011,7 @@
 												<li><a href = "../Modules/Module14/Video1">Module 14: Convolution And Multiplication Duality</a></li>
 												<li><a href = "../Modules/Module15/Video0">Module 15: The Z Transform</a></li>
 												<li><a href = "../Modules/Module16/Video0">Module 16: Audio Novelty Functions, Tempo Estimation, Matrix Multiplication</a></li>
+												<li><a href = "../Modules/Module17/Video0">Module 17: Sonifying Mel And Chroma Filterbanks</a></li>
 												<li><a href = "../Modules/Module18/Video0">Module 18: Matrix Multiplication for Audio Activations</a></li>
 												<!--
 												<li><a href = "../Modules/Module17/Video0">Module 17: Cross-Similarity, Warping Paths, Dynamic Time Warping</a></li>
