--- a/ClassExercises/Week9/Week9_DTWBacktrace/index.html
+++ b/ClassExercises/Week9/Week9_DTWBacktrace/index.html
@@ -300,9 +300,7 @@
 												<li><a href = "../../../../Modules/Module16/Video0">Module 16: Audio Novelty Functions, Tempo Estimation, Matrix Multiplication</a></li>
 												<li><a href = "../../../../Modules/Module17/Video0">Module 17: Sonifying Mel And Chroma Filterbanks</a></li>
 												<li><a href = "../../../../Modules/Module18/Video0">Module 18: Matrix Multiplication for Audio Activations</a></li>
-												<!--
-												<li><a href = "../../../../Modules/Module17/Video0">Module 17: Cross-Similarity, Warping Paths, Dynamic Time Warping</a></li>
-												!-->
+												<li><a href = "../../../../Modules/Module19/Video0">Module 19: Self-Similarity Matrices</a></li>
 											</ul>
 										</li>
 									</ul>
