--- a/ClassExercises/Week4/Week4_CombFilters/index.html
+++ b/ClassExercises/Week4/Week4_CombFilters/index.html
@@ -228,7 +228,7 @@
 												<li><a href = "../../../../Modules/Module17/Video0">Module 17: Sonifying Mel And Chroma Filterbanks</a></li>
 												<li><a href = "../../../../Modules/Module18/Video0">Module 18: Matrix Multiplication for Audio Activations</a></li>
 												<li><a href = "../../../../Modules/Module19/Video0">Module 19: Self-Similarity Matrices</a></li>
-												<li><a href = "../../../../Modules/Module20/Video1">Module 20: Intro To Supervised Learning</a></li>
+												<li><a href = "../../../../Modules/Module20/Video1">Module 20: Intro To Supervised Learning, Logistic Regression, Gradient Descent, And PyTorch</a></li>
 											</ul>
 										</li>
 									</ul>
