--- a/ClassExercises/Week9/Week9_DTWBacktrace/index.html
+++ b/ClassExercises/Week9/Week9_DTWBacktrace/index.html
@@ -304,6 +304,7 @@
 												<li><a href = "../../../../Modules/Module19/Video0">Module 19: Self-Similarity Matrices</a></li>
 												<li><a href = "../../../../Modules/Module20/Video1">Module 20: Intro To Supervised Learning, Logistic Regression, Gradient Descent, And PyTorch</a></li>
 												<li><a href = "../../../../Modules/Module21/Video0">Module 21: Neural Networks</a></li>
+												<li><a href = "../../../../Modules/Module22/Video1">Module 22: Multiclass Classification, Convolutional Neural Networks, And Overfitting</a></li>
 											</ul>
 										</li>
 									</ul>
