--- a/index.html
+++ b/index.html
@@ -528,7 +528,8 @@
 <tr><td>36</td><td>Mon 4/17/2023</td><td>Neural Networks And Deep Learning</td><td><ul><li><a href = "https://www.youtube.com/playlist?list=PLZHQObOWTQDNU6R1_67000Dx_ZCJB-3pi">3Blue1Brown Intro To Neural Nets</a></li></ul></td><td bgcolor=#f4e6e7><a href = "../Modules/Module21/Video0">Module 21: Neural Networks/a> Due Before Class
 </td></tr>
 <tr><td>--</td><td>Wed 4/19/2023</td><td>COSA Day</td><td></td><td>No CS 372 Class.  Enjoy the break!</td></tr>
-<tr><td>37</td><td>Fri 4/21/2023</td><td>LPC, Autoregressive Coding, Wavenet</td><td><ul><li><a href = "https://ccrma.stanford.edu/~hskim08/lpc/">Notes on Linear Predictive Coding</a></li><li><a href = "https://www.deepmind.com/blog/wavenet-a-generative-model-for-raw-audio">DeepMind WaveNet blog post</a></li></ul></td><td bgcolor=#f4e6e7>HW5 Due
+<tr><td>37</td><td>Fri 4/21/2023</td><td>LPC, Autoregressive Coding, Wavenet</td><td><ul><li><a href = "https://ccrma.stanford.edu/~hskim08/lpc/">Notes on Linear Predictive Coding</a></li><li><a href = "https://www.deepmind.com/blog/wavenet-a-generative-model-for-raw-audio">DeepMind WaveNet blog post</a></li></ul></td><td bgcolor=#f4e6e7><a href = "../Modules/Module22/Video1">Module 22: Multiclass Classification, Convolutional Neural Networks, And Overfitting</a> Due Before Class
+<HR>HW5 Due
 <HR>HW6: Differentiable Digital Signal Processing Out
 </td></tr>
 <tr><td>38</td><td>Mon 4/24/2023</td><td>Differentiable Digital Signal Processing</td><td><ul><li><a href = "https://magenta.tensorflow.org/ddsp">Google Magenta DDSP Blog Post</a></li></ul></td><td></td></tr>
@@ -1021,6 +1022,7 @@
 												<li><a href = "../Modules/Module19/Video0">Module 19: Self-Similarity Matrices</a></li>
 												<li><a href = "../Modules/Module20/Video1">Module 20: Intro To Supervised Learning, Logistic Regression, Gradient Descent, And PyTorch</a></li>
 												<li><a href = "../Modules/Module21/Video0">Module 21: Neural Networks</a></li>
+												<li><a href = "../Modules/Module22/Video1">Module 22: Multiclass Classification, Convolutional Neural Networks, And Overfitting</a></li>
 											</ul>
 										</li>
 									</ul>
