--- a/ClassExercises/BeattrackNotes/index.html
+++ b/ClassExercises/BeattrackNotes/index.html
@@ -240,8 +240,8 @@
 												<li><a href = "../../Assignments/HW3_Vocoders">HW3: Spectacular Spectrograms</a>
 												</li>
 												<li><a href = "../../Assignments/HW4_RhythmAnalysis">HW4: Tempo Estimation And Beat Tracking</a></li>
-												<li><a href = "../../Assignments/HW5_LetItBee">HW5: Let It Bee</a>
-												</li>
+												<li><a href = "../../Assignments/HW5_LetItBee">HW5: Let It Bee</a></li>
+												<li><a href = "../../Assignments/HW6_StringAlong">HW6: String Along</a></li>
 											</ul>
 										</li>
 										<li>
