Adding more examples

--- a/Assignments/HW6_StringAlong/index.html
+++ b/Assignments/HW6_StringAlong/index.html
@@ -580,10 +580,16 @@
 											</script>
 										</li>
 										<li>
+											You may want to save your model every few epochs just in case google colab crashes or you want to close it and pick up the training later.  Have a look at the <a href = "https://pytorch.org/tutorials/beginner/saving_loading_models.html">saving and loading models page</a> on the pytorch web site, as well as <a href = "https://colab.research.google.com/notebooks/io.ipynb">Google's documentation</a> on saving and loading files between colab and Google drive. 
+										</li>
+										<li>
+											If you're still having a lot of trouble training, try to fall back to synthetic plucked string data from the <code>FMDataset</code> I provided instead of Josh Garner's real violin audio.  The FM dataset is substantially simpler, and you should at least be able to train on that, so this will help you flush out bugs.
+										</li>
+										<li>
 											<p>
-												Take advantage of the the <code>plot_stft_comparison</code> method I provided to compare the ground truth audio <code>X</code> to the synthesized audio from your network <code>Y</code>.  For example, here's what I got when I called this method after 200 epochs:
+												Finally, take advantage of the the <code>plot_stft_comparison</code> method I provided to compare the ground truth audio <code>X</code> to the synthesized audio from your network <code>Y</code>.  For example, here's what I got when I called this method after 200 epochs:
 											</p>
-											<img src = "Results/Epoch200.png" width="70%">
+											<img src = "Results/Epoch200.png" width="90%">
 											<p>
 												As you can see, the synthesized is quite similar to the ground truth at this point!
 											</p>
@@ -601,14 +607,29 @@
 												<source src="Results/Epoch200Synth.wav" type="audio/wav">
 											  Your browser does not support the audio element.
 											</audio> 
-										</li>
-										<li>
-											You may want to save your model every few epochs just in case google colab crashes or you want to close it and pick up the training later.  Have a look at the <a href = "https://pytorch.org/tutorials/beginner/saving_loading_models.html">saving and loading models page</a> on the pytorch web site, as well as <a href = "https://colab.research.google.com/notebooks/io.ipynb">Google's documentation</a> on saving and loading files between colab and Google drive. 
-										</li>
-										<li>
-											If you're still having a lot of trouble training, try to fall back to synthetic plucked string data from the <code>FMDataset</code> I provided instead of Josh Garner's real violin audio.  The FM dataset is substantially simpler, and you should at least be able to train on that, so this will help you flush out bugs.
-										</li>
 
+
+											<p>
+												Here's another example 50 iterations later
+											</p>
+
+											<img src = "Results/Epoch250.png" width="90%">
+											<p>
+												Below is the original audio corresponding to the spectrogram on the left:
+											</p>
+											<audio controls>
+												<source src="Results/Epoch250Orig.wav" type="audio/wav">
+											  Your browser does not support the audio element.
+											</audio> 
+											<p>
+												Below is the audio synthesized from our network:
+											</p>
+											<audio controls>
+												<source src="Results/Epoch250Synth.wav" type="audio/wav">
+											  Your browser does not support the audio element.
+											</audio> 
+
+										</li>
 										
 									</ul>
 
