Linking to HW2 musical statements

--- a/index.html
+++ b/index.html
@@ -534,8 +534,8 @@
 <tr><td>38</td><td>Mon 4/24/2023</td><td>Autoencoders Sneak Preview, Differentiable Digital Signal Processing</td><td><ul><li><a href = "https://magenta.tensorflow.org/ddsp">Google Magenta DDSP Blog Post</a></li></ul></td><td></td></tr>
 <tr><td></td><td>Tue 4/25/2023</td><td></td><td></td><td bgcolor=#f4e6e7><a href = "Assignments/HW6_StringAlong">HW6: String Along</a> Out
 </td></tr><tr><td>39</td><td>Wed 4/26/2023</td><td>2D Convolutional Networks: CREPE (Fundamental Frequency) And Deep beat tracking</td><td><ul><li><a href = "https://www.justinsalamon.com/uploads/4/3/9/4/4394963/kim_crepe_icassp_2018.pdf">Jong Wook Kimg 2018: CREPE: A Convolutional Representation for Pitch Estimation</li><li><a href = "https://ofai.at/~jan.schlueter/pubs/2014_icassp.pdf">Schlüter/Böck 2014: "Improved Musical Onset Detection with Convolutional Neural Networks</a></li><li><a href = "https://www.eurasip.org/Proceedings/Eusipco/eusipco2019/Proceedings/papers/1570533824.pdf">Davies/Böck 2019: Temporal Convolutional Neural Networks for Musical Audio Beat Tracking</a></li></ul></td><td></td></tr>
-<tr><td>40</td><td>Fri 4/28/2023</td><td>Wave-U-Net for Source Separation</td><td><ul><li><a href = "https://arxiv.org/pdf/1806.03185.pdf">Wave-U-Net Paper</a></li></ul></td><td></td></tr>
-<tr><td>41</td><td>Mon 5/1/2023</td><td>Autoencoders, LPC, Autoregressive Coding</td><td><ul><li><a href = "https://ccrma.stanford.edu/~hskim08/lpc/">Notes on Linear Predictive Coding</a></li><li><a href = "https://www.deepmind.com/blog/wavenet-a-generative-model-for-raw-audio">DeepMind WaveNet blog post</a></li></ul></td><td></td></tr>
+<tr><td>40</td><td>Fri 4/28/2023</td><td>Autoencoders, LPC, Autoregressive Coding</td><td><ul><li><a href = "https://ccrma.stanford.edu/~hskim08/lpc/">Notes on Linear Predictive Coding</a></li><li><a href = "https://www.deepmind.com/blog/wavenet-a-generative-model-for-raw-audio">DeepMind WaveNet blog post</a></li></ul></td><td></td></tr>
+<tr><td>41</td><td>Mon 5/1/2023</td><td>Wave-U-Net for Demixing</td><td><ul><li><a href = "https://arxiv.org/pdf/1806.03185.pdf">Wave-U-Net Paper</a></li><li><a href = "https://github.com/ursinus-cs372-s2023/Week15_WaveUNet/blob/main/WaveUNetSol.ipynb">Code from class</a></li></ul></td><td></td></tr>
 <tr><td>42</td><td>Wed 5/3/2023</td><td>Ethics Discussion: Music in The Era of Generative AI</td><td></td><td></td></tr>
 </td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr><!-- End Schedule -->
 
@@ -965,6 +965,11 @@
 													</ul>
 												</li>
 												<li><a href = "Assignments/HW2_DigitalInstruments">HW2: Digital Instruments</a>
+												<ul>
+													<li>
+														<a href = "Assignments/HW2_DigitalInstruments/statements.html">Musical Statements</a>
+													</li>
+												</ul>
 												</li>
 												<li><a href = "Assignments/HW3_Vocoders">HW3: Spectacular Spectrograms</a>
 												</li>
@@ -997,6 +1002,7 @@
 												<li><a href = "ClassExercises/Week10/Week10_NMF">Week 10: Nonnegative Matrix Factorization for Demixing</a></li>
 												<li><a href = "ClassExercises/Week11/">Week 11: Fundamental Frequency Tracking And Autotuners</a></li>
 												<li><a href = "../Modules/Module21/Video0">Week 12: Linear Separability of Phase-Shifted Triangle/Square Waves</a></li>
+												<li><a href = "https://github.com/ursinus-cs372-s2023/Week15_WaveUNet/blob/main/WaveUNetSol.ipynb">Week 15: Wave-U-Net</a></li>
 											</ul>
 										</li>
                                         <li>
