--- a/Assignments/HW3_Vocoders/statements.html
+++ b/Assignments/HW3_Vocoders/statements.html
@@ -207,6 +207,11 @@
 													</ul>
 												</li>
 												<li><a href = "../../Assignments/HW2_DigitalInstruments">HW2: Digital Instruments</a>
+												<ul>
+													<li>
+														<a href = "../../Assignments/HW2_DigitalInstruments/statements.html">Musical Statements</a>
+													</li>
+												</ul>
 												</li>
 												<li><a href = "../../Assignments/HW3_Vocoders">HW3: Spectacular Spectrograms</a>
 												</li>
@@ -239,6 +244,7 @@
 												<li><a href = "../../ClassExercises/Week10/Week10_NMF">Week 10: Nonnegative Matrix Factorization for Demixing</a></li>
 												<li><a href = "../../ClassExercises/Week11/">Week 11: Fundamental Frequency Tracking And Autotuners</a></li>
 												<li><a href = "../../../Modules/Module21/Video0">Week 12: Linear Separability of Phase-Shifted Triangle/Square Waves</a></li>
+												<li><a href = "https://github.com/ursinus-cs372-s2023/Week15_WaveUNet/blob/main/WaveUNetSol.ipynb">Week 15: Wave-U-Net</a></li>
 											</ul>
 										</li>
                                         <li>
