--- a/Assignments/HW6_StringAlong/index.html
+++ b/Assignments/HW6_StringAlong/index.html
@@ -255,7 +255,7 @@
 										</p>
 
 										<p>
-											Before you proceed to the next step, construct the dataset, pull out a few elements, and make sure they look right.
+											Before you proceed to the next step, construct the dataset using a <code>hop_Length</code> of 160, pull out a few elements, and make sure they look right.
 										</p>
 
 										<h4>Tips</h4>
